# newdrivers

./: .env.example  .gitignore  README.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_segundos_por_pregunta_to_intentos.py
backend/app/: main.py
backend/app/core/: database.py  dependencies.py  security.py  settings.py
backend/app/models/: __init__.py  config.py  intento.py  pregunta.py  respuesta.py  user.py
backend/app/routers/: admin.py  auth.py  exams.py  questions.py
backend/app/scripts/: seed.py
backend/app/services/: admin_service.py  auth_service.py  exam_service.py  question_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_rbac_contracts.py
backend/tests/integration/: test_admin.py  test_auth.py  test_exams.py  test_questions.py
backend/tests/unit/: test_auth_service.py  test_exam_service.py  test_question_service.py  test_rbac.py
frontend/: .eslintrc.json  Dockerfile  error.vue  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/composables/: useAuth.ts  useExam.ts  useTimer.ts
frontend/layouts/: admin.vue  default.vue
frontend/middleware/: auth.ts
frontend/pages/: history.vue  index.vue  login.vue  register.vue
frontend/stores/: auth.ts  exam.ts
frontend/tests/: setup.ts
specs/001-exam-simulator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+34 files in other folders)
